# esp-vocat-base-clone

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  magnetic_sensing_interaction_solution_en.md  magnetic_sensing_interaction_solution_zh.md
3D_models/: ESP-VoCat catbase ball only 2025-11-22.STEP  ESP-VoCat catbase cover 2025-11-22.STEP  ESP-VoCat catbase platform top 2025-11-22.STEP  ESP-VoCat_catbase_20251128.stp  ESP-VoCat_catbase_platform_btm_20251128.stp  EchoEar_catbase_20251128.stp  VoCat_catbase_20251128.stp  echoear catbase ball only 2025-11-22.STEP  echoear catbase cover 2025-11-22.STEP  echoear catbase platform top 2025-11-22.STEP  echoear_catbase_platform_btm_20251128.stp  vocat catbase ball only 2025-11-22.STEP  vocat catbase cover 2025-11-22.STEP  vocat catbase platform top 2025-11-22.STEP  (+1 more)
software/common_components/magnetic_slide_switch/: CMakeLists.txt
software/common_components/magnetic_slide_switch/profiles/base/include/: magnetic_slide_switch.h
software/common_components/magnetic_slide_switch/profiles/bell/: magnetic_slide_switch.c
software/common_components/magnetic_slide_switch/profiles/bell/include/: magnetic_slide_switch.h
software/common_components/magnetic_slide_switch/profiles/iphone/: magnetic_slide_switch.c
software/common_components/magnetic_slide_switch/profiles/iphone/include/: magnetic_slide_switch.h
software/common_components/magnetic_slide_switch/profiles/magnetic_accessory/: magnetic_slide_switch.c
software/common_components/magnetic_slide_switch/profiles/magnetic_accessory/include/: magnetic_slide_switch.h
(+40 files in other folders)
